--- a/css/style.css
+++ b/css/style.css
@@ -444,5 +444,6 @@ and (-webkit-device-pixel-ratio : 3) {
   border-radius: 25px;
   display: none;
   cursor: pointer;
-  margin-left: auto;
+  margin-left: 50%;
+  transform: translateX(-50%)
 }
